# smol-gpu

./: .clang-tidy  .gitignore  .rules.verible_lint  CMakeLists.txt  Makefile  README.md  instructions.txt  justfile
assembler/: CMakeLists.txt  main.cpp
assembler/lib/: CMakeLists.txt  common.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  parser_utils.cpp  parser_utils.hpp  token.hpp
sim/: CMakeLists.txt  main.cpp  sim.hpp
sim/aslib/: CMakeLists.txt  common.hpp  data_reader.cpp  data_reader.hpp  emitter.cpp  emitter.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  parser_utils.cpp  parser_utils.hpp  token.hpp
sim/sim/: error.hpp  instructions.hpp  sim.hpp
sim/simlib/: CMakeLists.txt  error.hpp  instructions.hpp  sim.hpp
src/: CMakeLists.txt  alu.sv  compute_core.sv  decoder.sv  dispatcher.sv  fetcher.sv  gpu.sv  lsu.sv  mem_controller.sv  reg_file.sv  scalar_reg_file.sv  shader_core.sv  top.sv
src/common/: common.sv
src/gpu/: gpu.sv
test/: CMakeLists.txt  gpu_top_tb.sv  test.cpp  test2.cpp  test_dispatcher.py  test_gpu.py  test_mov.cpp
test/assembler/: CMakeLists.txt  assembler_helper.hpp  directive_parsing.cpp  generic_parsing.cpp  instruction_parsing.cpp  number_parsing.cpp
test/full_system_tests/: addi_slti_sw_halt_test.as
test/gpu/: CMakeLists.txt  full_system_test.cpp  general_instruction_tests.cpp
test/gpu/full_system_tests/: addi_slti_sw_halt_test.expected  jalr_to_label1.as  jalr_to_label1.expected  jalr_to_label2.expected
