function(create_test test_name source_file)
  add_executable(${test_name} ${source_file})
  target_link_libraries(${test_name} doctest)
  foreach(lib IN LISTS ARGN)
    target_link_libraries(${test_name} ${lib})
  endforeach()
  add_test(NAME ${test_name} COMMAND ${test_name})
endfunction()

create_test(test_instructions test.cpp Sim GPU)
create_test(generic_tests test2.cpp Sim GPU)
